Add live gold price Ticker

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,12 +9,17 @@
       crossorigin="anonymous">
     <title>SpotPrice.io Live Gold Spot Price Indicator</title>
   </head>
-  <body>
-    <noscript>
-      You need to enable JavaScript to run this app.
-    </noscript>
+  <body>    
+    <div id='339b8849-3bfe-48ac-828b-9483026c8dfa' style='min-height:45px;'></div>
     <div id="root"></div>
-
+    <script>
+      (function () {
+        var t = document.getElementsByTagName('script')[0];
+        var s = document.createElement('script'); s.async = true;
+        s.src = 'https://widget.nfusionsolutions.com/widget/script/ticker/1/f6bbba8d-f481-4700-9d2e-bb874a1a81bb/339b8849-3bfe-48ac-828b-9483026c8dfa';
+        t.parentNode.insertBefore(s, t);
+      })();
+    </script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
       crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh"
