Add test table and fix login

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,14 +11,14 @@
   </head>
   <body>    
     <div id="root"></div>
-    <script>
+    <!-- <script>
       (function () {
         var t = document.getElementsByTagName('script')[0];
         var s = document.createElement('script'); s.async = true;
         s.src = 'https://widget.nfusionsolutions.com/widget/script/ticker/1/f6bbba8d-f481-4700-9d2e-bb874a1a81bb/339b8849-3bfe-48ac-828b-9483026c8dfa';
         t.parentNode.insertBefore(s, t);
       })();
-    </script>
+    </script> -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
       crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh"
