--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,6 +5,7 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb"
       crossorigin="anonymous">
     <title>SpotPrice.io Live Gold Spot Price Indicator</title>
@@ -14,6 +15,11 @@
     <div id="root"></div>
     <script>
       (function () {
+        // delete window.document.referrer;
+        // window.document.__defineGetter__('referrer', function () {
+        //   return "www.rggpricing.com";
+        // });
+        console.log(window.document.referrer);
         var t = document.getElementsByTagName('script')[0];
         var s = document.createElement('script'); s.async = true;
         s.src = 'https://widget.nfusionsolutions.com/widget/script/ticker/1/f6bbba8d-f481-4700-9d2e-bb874a1a81bb/339b8849-3bfe-48ac-828b-9483026c8dfa';
