Fix Retail bid ==> retail ask and add sticky header with live spot prices

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,8 +10,8 @@
       crossorigin="anonymous">
     <title>SpotPrice.io Live Gold Spot Price Indicator</title>
   </head>
-  <body> 
-    <div id='4fc5add6-5eb1-4de4-a6a2-08bebec30138' style='min-height:55px;'></div>
+  <body>
+    <div class="live-ticker" id='4fc5add6-5eb1-4de4-a6a2-08bebec30138'></div>
     <div id="root"></div>
     <script>
       (function () {
